--- a/app/src/main/res/values/non_translatable.xml
+++ b/app/src/main/res/values/non_translatable.xml
@@ -1,17 +1,32 @@
 <resources>
     <!--    Languages   -->
-    <string name="en" translatable="false">English</string>
-    <string name="uk" translatable="false">Українська</string>
-    <string name="ru" translatable="false">Русский</string>
     <string name="de" translatable="false">Deutsch</string>
-    <string name="in" translatable="false">Bahasa Indonesia</string>
+    <string name="en" translatable="false">English</string>
     <string name="es" translatable="false">Español</string>
-    <string name="it" translatable="false">Italiano</string>
-    <string name="zh" translatable="false">简体中文 (Chinese Simplified)</string>
-    <string name="pt" translatable="false">Português</string>
-    <string name="th" translatable="false">ไทย (Thai)</string>
     <string name="fr" translatable="false">Français</string>
+    <string name="hi" translatable="false">हिन्दी</string>
+    <string name="in" translatable="false">Bahasa Indonesia</string>
+    <string name="it" translatable="false">Italiano</string>
     <string name="ja" translatable="false">日本語 (Japanese)</string>
+    <string name="pt" translatable="false">Português</string>
+    <string name="ru" translatable="false">Русский</string>
+    <string name="uk" translatable="false">Українська</string>
+    <string name="zh" translatable="false">简体中文 (Chinese Simplified)</string>
+    <string name="th" translatable="false">ไทย (Thai)</string>
+
+    <string name="de_name" translatable="false">German</string>
+    <string name="en_name" translatable="false">English</string>
+    <string name="es_name" translatable="false">Spanish</string>
+    <string name="fr_name" translatable="false">French</string>
+    <string name="hi_name" translatable="false">Hindi</string>
+    <string name="in_name" translatable="false">Indonesian</string>
+    <string name="it_name" translatable="false">Italian</string>
+    <string name="ja_name" translatable="false">Japanese</string>
+    <string name="pt_name" translatable="false">Portuguese</string>
+    <string name="ru_name" translatable="false">Russian</string>
+    <string name="uk_name" translatable="false">Ukrainian</string>
+    <string name="zh_name" translatable="false">Chinese Simplified</string>
+    <string name="th_name" translatable="false">Thai</string>
 
     <string name="app_version_text" translatable="false">«Game of Life» store bundled v</string>
 </resources>
