--- a/app/src/main/res/values/non_translatable.xml
+++ b/app/src/main/res/values/non_translatable.xml
@@ -29,4 +29,6 @@
     <string name="th_language" translatable="false">Thai</string>
 
     <string name="app_version_text" translatable="false">«Game of Life» store bundled v</string>
+    <string name="JohnHortonConway_wiki_uri" translatable="false">https://wikipedia.org/wiki/John_Horton_Conway</string>
+
 </resources>
