--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splash_background">#131313</color>
+    <color name="primary">#A2D297</color>
+    <color name="onPrimary">#0D380D</color>
 </resources>
