--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.GameOfLife" parent="android:Theme.Material.Light.NoActionBar"/>
+    <style name="Theme.GameOfLife" parent="Theme.Material3.DayNight.NoActionBar"/>
 </resources>
